[tool.poetry]
name = "rich-tea"
version = "0.3.0"
description = "Tools for approximating The Elm Architecture, powered by Rich"
authors = ["Aatif Syed <aatifsyedyp@gmail.com>"]
repository = "https://github.com/aatifsyed/rich-tea"
include = ["py.typed"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.0.0"
prompt-toolkit = "^3.0.24"
more-itertools = "^8.12.0"
returns = "^0.18.0"

[tool.poetry.dev-dependencies]
textual = "^0.1.14"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
pytest = "^6"
mypy = "^0.931"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
